[tool.poetry]
name = "optphys"
version = "0.1.0"
description = "Optical Physics Tools"
authors = ["Dane Austin <dane_austin@fastmail.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"
pyqtgraph-extensions = "^0.5.9"
periodictable = "^1.6.1"
pytest-qt = "^4.2.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
